# KLIPAURA

./: .env.example  .gitignore  .railway.toml  Dockerfile  README.md  SYSTEM_READY_GUIDE.md  TASK_TRACKER.md  docker-compose.yml  railway.toml  requirements.txt  scheduler.py
ARCHIVES/: README.md
config/: affiliate_programs.json  avatars.json  templates.json  voice_tone_presets.json
docs/: DEPLOYMENT.md  MISSION_CONTROL.md
infrastructure/: __init__.py  affiliate_programs.py  autopilot_info.py  avatar_loader.py  avatar_registry.py  db.py  db_models.py  db_session.py  job_state.py  ops_runtime.py  product_passport.py  queue_names.py  redis_client.py  scheduler_budget.py  storage.py  system_guardian.py  telegram_notify.py
klip-avatar/: worker.py
klip-core/: pyproject.toml
klip-core/klip_core/: __init__.py  config.py  kill_switch.py
klip-core/klip_core/events/: __init__.py  publisher.py  schemas.py
klip-core/klip_core/logging/: __init__.py  structured.py
klip-core/klip_core/redis/: __init__.py  client.py  queues.py
klip-core/klip_core/storage/: __init__.py  r2.py
klip-dispatch/: __init__.py  hitl_server.py  hitl_server_phase2.py  publisher.py  revenue_tracker.py
klip-funnel/: Dockerfile  requirements.txt
klip-mission-control/: .gitignore  Dockerfile.api  docker-entrypoint.sh  hitl_server.py  job_state_mc.py  main.py  next.config.js  package-lock.json  package.json  railway.toml  requirements.txt  tailwind.config.ts  tsconfig.tsbuildinfo
klip-scanner/: Dockerfile  main.py  requirements.reboot.txt
klip-selector/: __init__.py  api.py  publisher.py  (+2 more)
(+292 files in other folders)
